--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-/* Estilos globales */
+/* Fuente importada  */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-
+/* Estilos globales */
 * {
     box-sizing: border-box;
     margin: 0;
